# ChaserOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  linker.ld  run.sh
.github/workflows/: ci.yml  release.yml
boot/: boot.asm
build-cnoss-slimehome/: CMakeCache.txt
build-cnoss-test/: CMakeCache.txt
build-kernel-check/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: anaf.cmake  cnaf-anaf.cmake  gcc-for-chaseros.cmake  gcc-for-cnos.cmake  x86_64-chaseros-gcc.cmake  x86_64-elf.cmake
integrations/slime-for-chaseros/: README.txt
integrations/slime-for-cnos/: README.txt  ROADMAP.txt  SLIME-SRC-OVERVIEW.txt
integrations/slime-for-cnos/std/: README.txt
integrations/slime-for-cnos/std/cnos/: constants.sm  errno.sm  fd.sm  io.sm  ipc.sm  runtime.sm  syscall.sm
integrations/slime-for-cnos/upstream/: .gitignore  README.txt
iso/boot/grub/: grub.cfg
kernel/: console.c  console.h  elf.h  elf_load.c  elf_load.h  entry.asm  errno.h  gdt.c  gdt.h  gdt_load.asm  hybrid.h  hybrid_ipc.c  hybrid_ipc.h  idt.c  idt.h  interrupts.asm  io.h  ipc.c  ipc.h  isr.c  isr.h  main.c  multiboot.c  multiboot.h  pmm.c  pmm.h  power.c  power.h  process.c  process.h  sched.c  sched.h  shell.c  shell.h  syscall_abi.h  sysinfo.c  sysinfo.h  user.c  user.h  user_fd.c  (+4 more)
kernel/ahci_rust/: Cargo.toml  README.txt
kernel/ahci_rust/.cargo/: config.toml
kernel/ahci_rust/src/: lib.rs
kernel/drivers/: ahci_pci.c  ahci_pci.h  ahci_rust_api.h  font.c  font.h  graphics.c  graphics.h  gui.c  gui.h  ide.c  ide.h  mouse.c  mouse.h  pci.c  pci.h  serial.c  serial.h  sheet.c  sheet.h  ttfont.c  ttfont.h  vga.c  vga.h
kernel/fs/: README  version.h  vfs.c  vfs.h  vfs_devfs.c  vfs_devfs.h
kernel/fs/chaseros/: chaseros_ext2_vol.c  chaseros_ext2_vol.h
kernel/fs/cnaf/: cnab.h  cnab_load.c  cnaf.h  cnaf_image.c  cnaf_image.h  cnaf_spec.h  cnaf_validate.c
kernel/fs/cnos/: cnos_alloc.c  cnos_ext2.c  cnos_ext2_vol.c  cnos_ext2_vol.h  cnos_io.c  cnos_io.h  config.h  porting.h
kernel/fs/include/ext2fs/: ext2_err.h  ext2_types.h
kernel/fs/include/mingw/: unistd.h
kernel/fs/include/mingw/arpa/: inet.h
kernel/fs/include/mingw/sys/: sysmacros.h
kernel/fs/lib/: config.h.in  dirpaths.h.in
kernel/fs/lib/e2p/: crypto_mode.c  e2p.h  encoding.c  errcode.c  feature.c  fgetflags.c  fgetproject.c  fgetversion.c  fsetflags.c  fsetproject.c  fsetversion.c  getflags.c  getversion.c  hashstr.c  iod.c  ljs.c  ls.c  mntopts.c  ostype.c  parse_num.c  pe.c  percent.c  pf.c  project.h  ps.c  setflags.c  setversion.c  uuid.c
kernel/fs/lib/et/: com_err.c  com_err.h  com_right.c  compile_et.sh.in  error_message.c  error_table.h  et_c.awk  et_h.awk  et_name.c  init_et.c  internal.h  vfprintf.c
kernel/fs/lib/ext2fs/: alloc.c  alloc_sb.c  alloc_stats.c  alloc_tables.c  atexit.c  badblocks.c  bb_compat.c  bb_inode.c  bitmaps.c  bitops.c  bitops.h  blkmap64_ba.c  blkmap64_rb.c  blknum.c  block.c  bmap.c  bmap64.h  bmove.c  brel.h  brel_ma.c  check_desc.c  closefs.c  compiler.h  crc16.c  crc16.h  crc32c.c  crc32c_defs.h  csum.c  dblist.c  dblist_dir.c  digest_encode.c  dir_iterate.c  dirblock.c  dirhash.c  dosio.c  dosio.h  dupfs.c  e2image.h  expanddir.c  ext2_err.et.in  (+83 more)
kernel/fs/lib/ext2fs/tdb/: build-tdb
kernel/fs/lib/ext2fs/tdb/patches/: copyright  ext2tdb-rename  replace-includes  series  static-functions  static-prototypes  tdbtool-includes
kernel/loader/: cndyn_loader.c  cndyn_loader.h  user_exec.c  user_exec.h
scripts/: build-ahci-rust.sh  build-anaf-cross-toolchain.sh  build-chaseros-app-linux-toolchain.sh  build-chaseros-cross-toolchain.sh  build-chaseros-native-gcc.sh  build-cnaf-user.sh  build-cnos-app-linux-toolchain.sh  build-cnos-cross-toolchain.sh  build-cnos-slime-toolchain.sh  build-x86_64-elf-toolchain.sh  chaseros-slime-compile.sh  chaseros-slime-dev-env.sh  chaseros-slimec-lib.sh  chaseros-slimec.sh  cnos-slime-compile.sh  cnos-slime-dev-env.sh  cnos-slimec-lib.sh  cnos-slimec.sh  fetch-slime-upstream.sh  gcc-for-cnos-linux-install.sh  pack-cnaf.py  pack-cnafl.py  pack-cnlk.py  pack-cnpk.py  slime-pack-cnaf.sh  slimec  test-chaseros-native-link.sh  test-cnpk-qemu-smoke.sh  test-cnpk-smoke.sh  test-proc-api-static.sh  test-qemu-proc-smoke.sh  wrap-cnab.py  wrap-cnim.py
toolchains/: README.txt
toolchains/gcc-for-chaseros/: README.txt
toolchains/gcc-for-chaseros/runtime/: chaseros_user_runtime.c  crt0.S
toolchains/gcc-for-chaseros/runtime/include/: chaseros_user_runtime.h
toolchains/gcc-for-cnos/: README.txt
toolchains/linux-cnos-app/: README.txt
toolchains/slime-for-cnos/: README.txt
user/: BUILD-CNAF.txt  CMakeLists.txt  README.txt  SYSCALL-ABI.txt  cnafloader.sm  cnos-first.sm  hello-std.sm  hello.c  hello.sm  ipc-hl-demo.sm  slime-demo.sm  syscall-errno-demo.sm  user.ld
user/apps/: README.txt  minimal.c
user/cnos-rt/: README.txt  cnos_syscalls.asm
user/include/: chaseros_user.h  cnos_user.h
